@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.6.3 (**svn**)
+* Fixed hanging special char issue with 'special' URL chars at the end of a URL
+  that are missing the variable afterwards.
 * Changed Routes generation and recognition to handle other 'special' URL chars
   , . and ; as if they were /. This lets them be optionally left out of the
   resulting generated URL. Feature requested by David Smith.
